Creato con Colab

--- a/inviare_messaggio_su_Solace.ipynb
+++ b/inviare_messaggio_su_Solace.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvJMnL1C7ZYO/m1Bpk24po",
+      "authorship_tag": "ABX9TyORW2Qm8M9la3KzP2U4qF0T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,37 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "6nXNhtOFmeWI"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "b653bab6",
-        "outputId": "cf53a816-9169-4b3a-df02-1fc77fd9d15e"
+        "outputId": "66c01de9-e2e2-4d7c-bc3b-fe0e3534c05c"
       },
       "source": [
         "pip install solace-pubsubplus"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting solace-pubsubplus\n",
-            "  Downloading solace_pubsubplus-1.11.0-py36-none-manylinux_2_12_x86_64.whl.metadata (5.2 kB)\n",
-            "Downloading solace_pubsubplus-1.11.0-py36-none-manylinux_2_12_x86_64.whl (4.7 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.7/4.7 MB\u001b[0m \u001b[31m26.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: solace-pubsubplus\n",
-            "Successfully installed solace-pubsubplus-1.11.0\n"
+            "Requirement already satisfied: solace-pubsubplus in /usr/local/lib/python3.12/dist-packages (1.11.0)\n"
           ]
         }
       ]
@@ -78,19 +64,71 @@
         "id": "1410c533"
       },
       "source": [
-        "import solace_common.blocking.publisher\n",
+        "import os\n",
+        "import time\n",
         "\n",
+        "# Import Solace Python  API modules\n",
+        "from solace.messaging.messaging_service import MessagingService, ReconnectionListener, ReconnectionAttemptListener, ServiceInterruptionListener, RetryStrategy, ServiceEvent\n",
+        "from solace.messaging.errors.pubsubplus_client_error import PubSubPlusClientError\n",
+        "from solace.messaging.publisher.direct_message_publisher import PublishFailureListener, FailedPublishEvent\n",
+        "from solace.messaging.resources.topic_subscription import TopicSubscription\n",
+        "from solace.messaging.receiver.message_receiver import MessageHandler\n",
+        "from solace.messaging.config.solace_properties.message_properties import APPLICATION_MESSAGE_ID\n",
+        "from solace.messaging.resources.topic import Topic\n",
+        "from solace.messaging.receiver.inbound_message import InboundMessage\n",
         "# Solace Connection Details (replace with your actual values)\n",
-        "SOLACE_HOST = 'tcp://your_solace_ip:55555' # e.g., tcp://localhost:55555 or tcps://your_solace_host:55443 for TLS\n",
-        "SOLACE_VPN = 'your_vpn_name' # e.g., default\n",
-        "SOLACE_USERNAME = 'your_username' # e.g., guest\n",
-        "SOLACE_PASSWORD = 'your_password' # e.g., guest\n",
+        "SOLACE_HOST = 'tcps://mr-connection-1d0n94c2091.messaging.solace.cloud:55443' # Changed to tcp:// for non-TLS\n",
+        "SOLACE_VPN = 'myfirstservice' # e.g., default\n",
+        "SOLACE_USERNAME = 'solace-cloud-client' # e.g., guest\n",
+        "SOLACE_PASSWORD = 'nj8nmnunpa68tg00rfa06hol8r' # e.g., guest\n",
         "\n",
         "# Queue to send messages to\n",
-        "TARGET_QUEUE = 'my_solace_queue'\n"
+        "TARGET_QUEUE = 'test1'"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define broker_props using the already defined SOLACE_* variables\n",
+        "broker_props = {\n",
+        "    \"solace.messaging.transport.host\": SOLACE_HOST,\n",
+        "    \"solace.messaging.service.vpn-name\": SOLACE_VPN,\n",
+        "    \"solace.messaging.authentication.scheme.basic.username\": SOLACE_USERNAME,\n",
+        "    \"solace.messaging.authentication.scheme.basic.password\": SOLACE_PASSWORD,\n",
+        "    # Disabilita validazione certificati\n",
+        "    \"solace.messaging.tls.cert-validated\": False,\n",
+        "    \"solace.messaging.tls.cert-reject-expired\": False\n",
+        "    # TLS-specific properties are removed for tcp:// connection\n",
+        "}\n",
+        "\n",
+        "# Create the messaging service using from_properties\n",
+        "messaging_service = MessagingService.builder() \\\n",
+        "  .from_properties(broker_props) \\\n",
+        "  .with_reconnection_retry_strategy(RetryStrategy.parametrized_retry(20,3)) \\\n",
+        "  .build()\n",
+        "\n",
+        "messaging_service.connect()\n",
+        "print(\"CONNESSO!!!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Dq7UDr_hES-b",
+        "outputId": "faf1f7c7-fbf8-4410-8dc0-6c98ee94ad1c"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONNESSO!!!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -104,38 +142,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "133388ee"
+        "id": "133388ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8cf89373-d125-4d7e-d316-ebe85c5da3ee"
       },
       "source": [
         "try:\n",
-        "    # Create a publisher instance\n",
-        "    publisher = solace_common.blocking.publisher.Publisher(\n",
-        "        SOLACE_HOST,\n",
-        "        SOLACE_VPN,\n",
-        "        SOLACE_USERNAME,\n",
-        "        SOLACE_PASSWORD\n",
-        "    )\n",
-        "\n",
-        "    # Connect to Solace\n",
-        "    publisher.connect()\n",
-        "    print(\"Successfully connected to Solace.\")\n",
+        "    # Create a direct message publisher\n",
+        "    publisher = messaging_service.create_direct_message_publisher_builder().build()\n",
+        "    publisher.start()\n",
+        "    print(\"Publisher started successfully.\")\n",
         "\n",
         "    # Message to send\n",
         "    message_payload = \"Hello from Google Colab! This is a test message.\"\n",
         "\n",
-        "    # Send the message to the target queue\n",
-        "    publisher.publish(message_payload, TARGET_QUEUE)\n",
+        "    # Build the message\n",
+        "    message = messaging_service.message_builder() \\\n",
+        "        .with_property(APPLICATION_MESSAGE_ID, \"my-message-id-1\") \\\n",
+        "        .build(message_payload)\n",
+        "\n",
+        "    # Publish the message to the target queue as a topic\n",
+        "    # For queues, Solace uses a topic dispatch type to route messages\n",
+        "    publisher.publish(message, Topic.of(TARGET_QUEUE))\n",
         "    print(f\"Sent message: '{message_payload}' to queue '{TARGET_QUEUE}'.\")\n",
         "\n",
+        "except PubSubPlusClientError as e:\n",
+        "    print(f\"PubSubPlusClientError: {e}\")\n",
         "except Exception as e:\n",
         "    print(f\"An error occurred: {e}\")\n",
         "finally:\n",
-        "    if 'publisher' in locals() and publisher.is_connected():\n",
-        "        publisher.disconnect()\n",
-        "        print(\"Disconnected from Solace.\")\n"
+        "    if 'publisher' in locals() and publisher.is_running():\n",
+        "        publisher.terminate()\n",
+        "        print(\"Publisher terminated.\")\n",
+        "    if messaging_service.is_connected:\n",
+        "        messaging_service.disconnect()\n",
+        "        print(\"Disconnected from Solace.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Publisher started successfully.\n",
+            "Sent message: 'Hello from Google Colab! This is a test message.' to queue 'test1'.\n",
+            "Publisher terminated.\n",
+            "Disconnected from Solace.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
